--- a/project/.env
+++ b/project/.env
@@ -1,3 +1,4 @@
 JWT_SECRET=your-secret-key-here
 PORT=8080
-DB_URI=mongodb+srv://ayu1234shgupta:444Ayushgupta@cluster0.y7ibi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=mongo --ssl --host lastet.c9mc2we40jbr.us-east-1.docdb.amazonaws.com:27017 --sslCAFile global-bundle.pem --username ayush444 --password 12345678
+# DB_URI=mongodb+srv://ayu1234shgupta:444Ayushgupta@cluster0.y7ibi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
